test/files/tokenizer/errors/invalid-symbol-lone.otest
name = "Lone invalid symbol"
line = 2
character = 1
error = 'Unrecognized symbol "$".'

---

$
